fix bug in AppUserDetailService